--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@angular/router": "~8.2.3",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.2",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ng2-charts": "^2.3.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
